# M4_Navigation

./: README.md
simulation_slam/: CMakeLists.txt  package.xml
simulation_slam/launch/: navigation.launch  rtabmap_advanced.launch  simulation_advanced.launch  simulation_advanced_merged.launch  simulation_full.launch  simulation_full_2.launch  simulation_merged.launch  simulation_simple.launch
simulation_slam/msg/: DualOccupancyGrid.msg  NavigationState.msg  OccupancyGridFlagged.msg
simulation_slam/params/: common_costmap_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
simulation_slam/script/: cost_map_node.py  dual_pc_2_map.py  empty_grid_pub.py  goal_pub.py  goal_status_pub.py  horizontal_cut_gridmap.py  inflate_grid.py  mode_detect_node.py  navigation_state_estimator.py  pointCloud2GridMap_node.py  power_computation.py  rl_controller.py  rosbag_controller.py  single_pc_2_map.py  test.py
simulation_world/: CMakeLists.txt  package.xml
simulation_world/Reports/: gazebo_angular_z_drift.yaml
simulation_world/config/: controller_config.yaml  joint_names_m4assembly.yaml
simulation_world/launch/: display.launch  gazebo.launch  gazebo_rviz.launch
simulation_world/meshes/: base_link_c.stl  front_left_hip.STL  front_right_hip.STL  rear_left_blade.STL  rear_right_blade.STL
simulation_world/meshes/col/: base_link.STL  base_link_old.STL  (+11 more)
simulation_world/msg/: HipPos.msg
simulation_world/rviz/: m4_nav.rviz  m4_slam.rviz  m4_visual.rviz  m4_visual_2.rviz  urdf.rviz
simulation_world/script/: base_footprint_pub.py  contact_node.py  key_controller.py  rl_controller.py  robot_mode_switch.py  robot_mode_switch_rl.py  wheel_velocity_pub.py
simulation_world/urdf/: m4.urdf  m4_fixed_blade.urdf  m4_fixed_blade_hip.urdf  m4_fixed_blade_hip_leg.urdf  m4_fixed_blade_leg.urdf  m4assembly.csv  m4assembly.urdf  m4assembly_dual_camera.urdf  m4assembly_low_power_sim.urdf  m4assembly_morphed_fixed_with_ardupilot.urdf  m4assembly_morphed_with_ardupilot.urdf  m4assembly_with_ardupilot (copy).urdf  m4assembly_with_ardupilot.urdf  m4assembly_with_ardupilot_workaround.urdf  new_iris.urdf  sdf.sdf
simulation_world/worlds/: Bridge_0.world  Bridge_1.world  Bridge_1_marked.world  Bridge_2.world  Cube_1.world  Cube_2.world  Cube_3.world  Simulation_0.world  Simulation_1.sdf  copernicus_crater.world  enclosed_boxes.world  iris_arducopter_runway_wheel.world  parkour_2.world  parkour_3.world  parkour_4.world  parkour_5.world  parkour_6.world  parkour_7.world  random_world.world  scenario_1.world  scenario_2.world  scenario_3.world  scenario_4a.world  scenario_4b.world  table.world  terrain_2.world  terrain_3.world  test1.world  test3.world  test_0.sdf  test_3.world
(+254 files in other folders)
