<?xml version="1.0"?>
<package format="2">
  <name>simulation_slam</name>
  <version>0.0.0</version>
  <description>The simulation_slam package</description>

  <maintainer email="m4@todo.todo">m4</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>key_controller_node</depend>

  <export>
  
  </export>
</package>
